<resources>
    <string name="app_name">My Notes</string>
    <string name="app_info">My Notes - My Notes is a simple notepad. It provides an easy and simple way to use notepad to write notes, reminders, emails, messages, to-do lists and shopping. Taking notes with My Notes is easier than with other notepads.</string>
    <string name="all_notes">All notes</string>
    <string name="edit_title_hint">Title</string>
    <string name="edit_search_hint">Search</string>
    <string name="version">version</string>
    <string name="delete_info">Delete one note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_date">Date</string>
    <string name="edit_date_hint">Input date</string>
    <string name="title_time">Time</string>
    <string name="edit_time_hint">Input time</string>
    <string name="btn_save_name">Save</string>
    <string name="settings">Settings</string>
    <string name="app_info_title">About</string>
    <string name="exit">Exit</string>
    <string name="choose_language">Choose language</string>

    <string name="colors">Colors</string>
    <string name="color_blue">Blue</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_light_green">Light green</string>
    <string name="color_light_red">Light red</string>
    <string name="color_dark_pink">Dark pink</string>
    <string name="color_orange">Orange</string>
    <string name="color_violet">Violet</string>
    <string name="color_yellow">Yellow</string>

</resources>