<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/all_notes"
            android:checked="true"
            android:title="@string/all_notes"
            android:icon="@drawable/ic_note"/>
        <item android:id="@+id/setting"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item android:id="@+id/about"
            android:title="@string/app_info_title"
            android:icon="@drawable/ic_info"/>
    </group>

    <item android:title="">
        <menu>
            <item android:title="@string/exit"
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>




</menu>