<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_date"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/cabin_semibold"/>
            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_date"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:background="@drawable/edittext_background"
                android:hint="@string/edit_date_hint"
                />
            <ImageView
                android:id="@+id/ic_calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignEnd="@id/input_date"
                android:layout_alignTop="@id/input_date"
                android:layout_alignBottom="@id/input_date"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_calendar"/>
            <TextView
                android:id="@+id/title_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_date"
                android:layout_marginTop="10dp"
                android:text="@string/title_time"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/cabin_semibold"/>
            <EditText
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_time"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:background="@drawable/edittext_background"
                android:hint="@string/edit_time_hint"
                />
            <ImageView
                android:id="@+id/ic_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignEnd="@id/input_time"
                android:layout_alignTop="@id/input_time"
                android:layout_alignBottom="@id/input_time"
                android:layout_marginEnd="6dp"
                android:src="@drawable/icon_alarm"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/input_time"
                app:cornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_save_name"
                android:textSize="16sp"
                android:fontFamily="@font/cabin_semibold"
                android:backgroundTint="#6C8BEB"
                android:textAllCaps="false"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>