<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_info"
                android:textSize="18sp"
                android:fontFamily="@font/abeezee"
                android:textColor="#515151"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="22sp"
                    android:fontFamily="@font/cabin_semibold"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
                <View
                    android:layout_marginTop="1dp"
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:background="#E6E5E5"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="22sp"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/cabin_semibold"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>


            </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>